Fix Purchase info style grid gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,7 @@ body {
   #purchase-info {
     display: grid;
     grid-gap: 30px;
-    grid-template-columns: 25% 75%;
+    grid-template-columns: calc(25% - 15px) calc(75% - 15px);
     align-items: center;
   }
 
